# zero2prod

./: .gitignore  Cargo.toml  configuration.yaml
.github/workflows/: general.yml
migrations/: 20240915025031_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
